<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bt_agent</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eric.dortmans@gmail.com">ros2</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>tf2_ros</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_msgs</depend> 
  <depend>nav2_util</depend> 
  <depend>nav2_common</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>bt_msgs</depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
